--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 .title {
-    @apply text-base text-gray-700 transition duration-500 ease-in-out
+    @apply text-base text-gray-700 transition duration-500 ease-in-out tracking-normal
 }
 
 .title:hover {
@@ -10,7 +10,7 @@
 }
 
 .title-white {
-    @apply text-white text-base text-center leading-tight transition duration-500 ease-in-out
+    @apply text-white text-base text-center leading-tight transition duration-500 ease-in-out tracking-normal
 }
 
 .title-white:hover {
@@ -18,7 +18,7 @@
 }
 
 .detail {
-    @apply text-sm text-gray-500
+    @apply text-sm text-gray-500 tracking-normal
 }
 
 .detail-white {
