--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri&display=swap');
 body {
     font-family: 'Hind Siliguri', sans-serif;
+    background-color: #ededed;
 }
 
 img {
