--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,3 +8,11 @@ img {
     width: 100%;
     height: 100% !important;
 }
+
+.hide-left {
+    margin-left: -66rem;
+}
+
+.sub-cat-margin {
+    top: 54px;
+}
