--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -7,6 +7,7 @@ body {
     font-family: 'Hind Siliguri', sans-serif;
     background-color: #ededed;
     scroll-behavior: smooth;
+    padding-top: 3rem;
 }
 
 img {
